// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBar Should disable autoFocus on EuiFieldText when disableAutoFocus prop is true 1`] = `
<EuiFlexGroup
  className="kbnQueryBar"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <EuiOutsideClickDetector
      onOutsideClick={[Function]}
    >
      <div
        aria-controls="kbnTypeahead__items"
        aria-expanded={false}
        aria-haspopup="true"
        aria-owns="kbnTypeahead__items"
        role="combobox"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <form
          name="queryBarForm"
        >
          <div
            role="search"
          >
            <div
              className="kuiLocalSearchAssistedInput"
            >
              <EuiFieldText
                append={
                  <QueryLanguageSwitcher
                    language="kuery"
                    onSelectLanguage={[Function]}
                  />
                }
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-controls="kbnTypeahead__items"
                aria-label="You are on search box of Another Screen page. Start typing to search and filter the discover"
                autoComplete="off"
                autoFocus={false}
                compressed={false}
                data-test-subj="queryInput"
                fullWidth={true}
                inputRef={[Function]}
                isLoading={false}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                placeholder="Search"
                role="textbox"
                spellCheck={false}
                type="text"
                value="response:200"
              />
            </div>
          </div>
        </form>
        <SuggestionsComponent
          index={null}
          loadMore={[Function]}
          onClick={[Function]}
          onMouseEnter={[Function]}
          show={false}
          suggestions={Array []}
        />
      </div>
    </EuiOutsideClickDetector>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiSuperUpdateButton
      data-test-subj="querySubmitButton"
      isDisabled={false}
      isLoading={false}
      needsUpdate={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`QueryBar Should pass the query language to the language switcher 1`] = `
<EuiFlexGroup
  className="kbnQueryBar"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <EuiOutsideClickDetector
      onOutsideClick={[Function]}
    >
      <div
        aria-controls="kbnTypeahead__items"
        aria-expanded={false}
        aria-haspopup="true"
        aria-owns="kbnTypeahead__items"
        role="combobox"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <form
          name="queryBarForm"
        >
          <div
            role="search"
          >
            <div
              className="kuiLocalSearchAssistedInput"
            >
              <EuiFieldText
                append={
                  <QueryLanguageSwitcher
                    language="lucene"
                    onSelectLanguage={[Function]}
                  />
                }
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-controls="kbnTypeahead__items"
                aria-label="You are on search box of Another Screen page. Start typing to search and filter the discover"
                autoComplete="off"
                autoFocus={true}
                compressed={false}
                data-test-subj="queryInput"
                fullWidth={true}
                inputRef={[Function]}
                isLoading={false}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                placeholder="Search"
                role="textbox"
                spellCheck={false}
                type="text"
                value="response:200"
              />
            </div>
          </div>
        </form>
        <SuggestionsComponent
          index={null}
          loadMore={[Function]}
          onClick={[Function]}
          onMouseEnter={[Function]}
          show={false}
          suggestions={Array []}
        />
      </div>
    </EuiOutsideClickDetector>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiSuperUpdateButton
      data-test-subj="querySubmitButton"
      isDisabled={false}
      isLoading={false}
      needsUpdate={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`QueryBar Should render the given query 1`] = `
<EuiFlexGroup
  className="kbnQueryBar"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <EuiOutsideClickDetector
      onOutsideClick={[Function]}
    >
      <div
        aria-controls="kbnTypeahead__items"
        aria-expanded={false}
        aria-haspopup="true"
        aria-owns="kbnTypeahead__items"
        role="combobox"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <form
          name="queryBarForm"
        >
          <div
            role="search"
          >
            <div
              className="kuiLocalSearchAssistedInput"
            >
              <EuiFieldText
                append={
                  <QueryLanguageSwitcher
                    language="kuery"
                    onSelectLanguage={[Function]}
                  />
                }
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-controls="kbnTypeahead__items"
                aria-label="You are on search box of Another Screen page. Start typing to search and filter the discover"
                autoComplete="off"
                autoFocus={true}
                compressed={false}
                data-test-subj="queryInput"
                fullWidth={true}
                inputRef={[Function]}
                isLoading={false}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                placeholder="Search"
                role="textbox"
                spellCheck={false}
                type="text"
                value="response:200"
              />
            </div>
          </div>
        </form>
        <SuggestionsComponent
          index={null}
          loadMore={[Function]}
          onClick={[Function]}
          onMouseEnter={[Function]}
          show={false}
          suggestions={Array []}
        />
      </div>
    </EuiOutsideClickDetector>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiSuperUpdateButton
      data-test-subj="querySubmitButton"
      isDisabled={false}
      isLoading={false}
      needsUpdate={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
